--- a/examples/query.ipynb
+++ b/examples/query.ipynb
@@ -21,7 +21,23 @@
    "source": [
     "import json\n",
     "from IPython.display import JSON\n",
-    "import requests"
+    "import requests\n",
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96a9bbc8-2668-4f7b-85b0-9b7e8e337a65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"config.json\") as file:\n",
+    "    configs = json.load(file)\n",
+    "mail = configs[\"mail\"]\n",
+    "password = configs[\"password\"]"
    ]
   },
   {
@@ -72,8 +88,8 @@
     "data={\n",
     "        \"grant_type\": \"password\",\n",
     "        \"client_id\": \"user-api\",\n",
-    "        \"username\": \"mail\",\n",
-    "        \"password\": \"super_safe_password\",\n",
+    "        \"username\": f\"{mail}\",\n",
+    "        \"password\": f\"{password}\",\n",
     "        \"refresh_token\": \"ey...\",\n",
     "    }\n",
     "\n",
@@ -148,9 +164,9 @@
    },
    "outputs": [],
    "source": [
-    "# Search in CIM10 all codes related to pharynx\n",
+    "# Search in ValueSet all codes related to pharynx\n",
     "\n",
-    "query3 = \"https://smt.esante.gouv.fr/fhir/ValueSet/vs-all-terminologie-cim-10/$expand?filter=pharynx\"\n",
+    "query3 = \"https://smt.esante.gouv.fr/fhir/ValueSet/terminologie-cim-10/$expand?filter=pharynx\"\n",
     "\n",
     "token = {\"Authorization\": f\"{token_result}\", \"Content-Type\": \"application/json+fhir\"}\n",
     "\n",
@@ -166,6 +182,44 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83c8d8da-5f90-4321-8508-6119d3f9af9c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# If <Response [200]>\n",
+    "\n",
+    "result = json.loads(r.text)\n",
+    "JSON(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c645d45e-6443-4282-a425-41631ce3b811",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Search in CodeSystem CIM10 specific codes\n",
+    "\n",
+    "query4 = \"https://smt.esante.gouv.fr/fhir/CodeSystem/$lookup?code=F02.00&system=https://smt.esante.gouv.fr/terminologie-cim-10\"\n",
+    "\n",
+    "token = {\"Authorization\": f\"{token_result}\", \"Content-Type\": \"application/fhir+json\"}\n",
+    "\n",
+    "r = requests.get(\n",
+    "    query4,\n",
+    "    headers=token,\n",
+    ")\n",
+    "\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f922fbc-7073-4165-a519-eacb2880ae59",
    "metadata": {
     "tags": []
    },
