more queries examples

--- a/examples/query.ipynb
+++ b/examples/query.ipynb
@@ -230,6 +230,41 @@
     "result = json.loads(r.text)\n",
     "JSON(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0e0ce11-d056-4434-8989-16916b418b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Search term in CIM10\n",
+    "\n",
+    "query5 = \"https://smt.esante.gouv.fr/fhir/ValueSet/$expand?url=https://smt.esante.gouv.fr/terminologie-cim-10?vs&filter=Cholera\"\n",
+    "\n",
+    "token = {\"Authorization\": f\"{token_result}\", \"Content-Type\": \"application/fhir+json\"}\n",
+    "\n",
+    "r = requests.get(\n",
+    "    query5,\n",
+    "    headers=token,\n",
+    ")\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df905ee6-4c95-4fa1-825e-fea07f9a354a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# If <Response [200]>\n",
+    "\n",
+    "result = json.loads(r.text)\n",
+    "JSON(result)"
+   ]
   }
  ],
  "metadata": {
